--- a/style.css
+++ b/style.css
@@ -5,145 +5,100 @@
 body {
 	padding: 0px;
 	margin: 0px;
-	background-color: #000;
-	font-family: 'Josefin Sans', sans-serif;
-	color: #fdd4d4;
+	font-family: 'Signika', sans-serif;
+	color: #ffffff;
+	background-color: #7a7a7a;
 }
 .quiz {
 	width: 100%;
 	min-height: 100vh;
-	margin: 10px 0px;
-	padding-top: 2vw;
+	padding:2vw 20vw;
 }
-
-.quiz__header {
-	text-align: center;
-	margin: 10px auto 50px;
-	font-size: 30px;
+.quiz__category{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding: 0;
 }
-
-.button {
-	padding: 20px 60px;
-	background-color: #fdd4d4;
-	font-size: 20px;
-	font-weight: bold;
-	border: 1px solid #fdd4d4;
+.quiz__category-item{
+	list-style: none;
+	margin: 10px;
+}
+.quiz__category-button{
+	padding: 5px;
+	width: 150px;
+	background-color: #872edb;
+	border: 2px solid #5f0a86;
 	border-radius: 5px;
 	cursor: pointer;
-	
+	color: #ffffff;
+	font-size: 15px;
 }
-.quiz__button{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	font-size: 40px;
-	border: 2px solid #fdd4d4;
-	z-index: 1;
+.quiz__category-button:focus,
+.quiz__category-button:active{
+	border: 2px solid #fff;
+	outline: 0;
 }
-.button:hover {
-	border: 1px solid #fdd4d4;
-	background-image: url("images/small.jpg");
-	color: #fdd4d4;
+.quiz__category-button:hover{
+	background-color: #5f0a86;
 }
-
 .quiz__container {
-	background-image: url("images/small.jpg");
+	background-color: rgba(0, 0, 0, 0.5);
+	/*background-image: url("../images/background.jpg");Photo by Emily Wang on Unsplash*/
 	border-radius: 10px;
-	padding: 0px 15px;
-	width: 300px;
-	height: 200px;
-	margin: 40px auto;
-	border: 2px solid #fdd4d4;
+	padding: 10px 15px;
+	width: 100%;
+	min-height: 400px;
+	height: max-content;
+	margin: 20px auto;
+	border: 2px solid #5f0a86;
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
 }
-@keyframes resize{
-	100%{width:80%;height:500px;}
+.quiz__container::after{
+	content: '';
+	position: absolute;
+	top:0;
+	right: 0;
+	bottom: 0;
+	left:0;
+	background-image: url("../images/background2.jpg");/*Photo by Aron Van de Pol on Unsplash*/
+	background-size: cover;
+	background-position: bottom;
+	border-radius: 10px;
+	z-index: -1;
 }
-.quiz__questions {
-	width: 100%;
-	font-size: 30px;
-	color: #fdd4d4;
-	display: flex;
-	flex-direction: column;
-	opacity: 0;
-}
-
-.quiz__question {
-	width: 100%;
-	padding: 35px 5px 5px 20px;
-	margin:2px;
+.quiz__instruction{
+	text-align: center;
+	font-size: 40px;
+	padding: 10px;
 	
 }
-@keyframes visibility{
-	0%{opacity:0;}
-	100%{opacity:1;}
+.quiz__question{
+	text-align: center;
+	font-size: 30px;
+	font-weight: 400;
+	margin: 2px;
+	animation: show 1s;
 }
-
-.pojawianie {
-	animation: visibility 3s forwards;
-}
-
-.quiz__item {
-	display: block;
-	position: relative;
-	padding: 20px 0 20px 55px;
-	background-color: #000000;
-	margin: 5px 5px;
+.quiz__option{
+	font-size: 25px;
+	padding: 10px;
 	cursor: pointer;
-	font-size: 22px;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	line-height: 32px;
-	border: 1px solid transparent;
-	border-radius:5px;
+	animation: show 1s;
 }
-.quiz__item:hover{
-	border: 1px solid #fdd4d4;
+.quiz__option:hover{
+	color: #872edb;
 }
-/* Ukrycie domyślnego znaku inputa radio */
-
-.quiz__item input {
-	position: absolute;
-	opacity: 0;
-	cursor: pointer;
-	height: 0;
-	width: 0;
-}
-
-/* alternatywny znaczek inputa radio */
-
-.checkmark {
-	position: absolute;
-	top: 22px;
-	left: 15px;
-	height: 25px;
-	width: 25px;
-	background-image: url(images/radio.png);
-	background-size: 100%;
-}
-
-/* Background inputa po najechaniu myszką */
-
-.quiz__item:hover input~.checkmark {
-	background-image: url(images/radio-hover.png);
-}
-
-/* Background kiedy input jest zaznaczony */
-
-.quiz__item input:checked~.checkmark {
-	background-image: url(images/radio-checked.png);
-}
+:checked + span {
+	color: #5f0a86;
+  }
 
 .disabled {
 	pointer-events: none;
 }
-
 .massage {
 	width: 50%;
 	min-height: 70px;
@@ -151,15 +106,7 @@ body {
 	padding: 5px;
 	text-align: center;
 	vertical-align: middle;
-}
-
-.again {
-	width: 50%;
-	margin: 20px auto;
-}
-
-.check {
-	margin: 20px auto;
+	font-size: 18px;
 }
 
 .good {
@@ -185,7 +132,6 @@ body {
 	animation: show 1s;
 	margin:3px;
 }
-
 @keyframes show {
 	from {
 		opacity: 0;
@@ -194,84 +140,30 @@ body {
 		opacity: 1;
 	}
 }
-
-.koniec {
+.check{
+	width: 50%;
+	padding: 20px;
 	align-self: center;
-	justify-self: center;
+	border-radius: 10px;
+	border: 2px solid #5f0a86;
+	cursor: pointer;
+	font-size: 20px;
+	font-weight: bold;
+	color: #5f0a86;
+	animation: show 1s;
 }
-
-/************USTAWIENIA @media DO QUIZ**********/
-
-@media(max-width:991px) {
-	.quiz {
-		width: 100%;
-		height: max-content;
-	}
-	.quiz__header{
-		margin: 0;
-		padding-bottom: 10px;
-	}
-	.button {
-		font-weight: normal;
-		font-size: 15px;
-		padding: 10px;
-		
-	}
-	.quiz__button{
-		font-size: 30px;
-		background-color: transparent;
-		color: #fdd4d4;
-	}
-	.quiz__container {
-		width: 80%;
-			
-	}
-	.quiz__questions {
-		font-size: 15px;
-		padding: 10px 5px;
-	
-	}
-	
-	.quiz__question {
-		padding: 0;
-		margin: 5px 0;
-		margin-left: unset;
-	}
-	.quiz__item{
-		margin: 5px 0;
-		font-size: 15px;
-		padding: 5px 5px 5px 45px;
-	}
-	.checkmark{
-		background-size: 60%;
-		background-repeat: no-repeat;
-		top: 11px;
-	}
-	.massage {
-		width: 95%;
-		font-size: 15px;
-		min-height: 60px;
-	}
-	.again{
-		width: 100%;
-	}
+.check:focus,
+.check:active{	
+	outline: 0;
 }
-
-.footer {
-	width: 100%;
-	padding: 5px 0px;
-	color: #000;
-	background-color: #fdd4d4;
-	font-size: 0.6vw;
-	bottom: 0px;
-	align-self: center;
+.check:hover{
+	background-color: #872edb;
+	color: #fff;
+}
+.koniec{
 	text-align: center;
+	font-size: 50px;
 }
-
-/************USTAWIENIA @media DO QUIZ**********/
-
-@media(max-width:991px) {
-	.footer {
-		font-size: 10px;
-	}
+.footer{
+	text-align: center;
 }
